--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.2d.spriteshape": "9.0.2",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "3.1.2",
+    "com.unity.addressables": "1.21.21",
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.analytics": "3.8.1",
